--- a/index.html
+++ b/index.html
@@ -25,7 +25,12 @@
         <p
             id=HTML> This is a second paragraph
         </p>
-        
+        <p class = " demo"> this is a id demo
+
+        </p>
+        <a href="http://127.0.0.1:5501/index.html" target="_blank">the web page  </a>
+        <a href="index.html"> start web page</a>
+        <a href="about.htmi">about me </a>
     
     </body>
 </html>
